# Home-security-system

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  KnownPerson.cpp  KnownPerson.h  UnknownPerson.cpp  UnknownPerson.h  install_opencv.sh  main.cpp  readme.md
UI/: addnewuser.cpp  addnewuser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
cameraConfig/: camera.cpp  camera.h  main.cpp
database/: Database.cpp  Database.h  KnownPerson.cpp  KnownPerson.h  UnknownPerson.h
facial_rec/: FaceRecognizer.cpp  FaceRecognizer.h
facial_rec/camera/: Camera.cpp  Camera.h
facial_rec/database/: Database.cpp  Database.h  KnownPerson.cpp  KnownPerson.h  UnknownPerson.cpp  UnknownPerson.h
facial_rec/facial_detc/: FaceDetection.cpp  FaceDetection.h
screenshots/: SaveScreenshot.cpp  SaveScreenshot.h
twilio/: Message.cpp  Message.h  cpp_demo.c  cpp_demo.cpp  main.c  notification.cpp  twilio.cpp  twilio.h  type_conversion.h
